fixed nav bar z-index issue

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ header {
     position: fixed;
     width: 100%;
     top: 0;
+    z-index: 10
 }
 
 nav {
@@ -138,13 +139,12 @@ a:hover {
 }
 
 .banner {
-    background-color: rgb(255, 255, 255);
+    background-color: inherit;
     background-position: center;
-    margin-top: 80px;
-    max-width: 800px;
+    max-width: 100%;
     color: #000000;
     text-align: center;
-    font-size: 1em; /* Adjusted font size for the title */
+    font-size: 1.5em; /* Adjusted font size for the title */
 }
 
 section {
@@ -294,4 +294,6 @@ ul.sectors {
   ul.sectors p {
     color: #555; /* Dark gray text color */
   }
+  
+
   
